fix not showing icon bug

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 :root{
     --primary-color:#2ed573;
@@ -19,6 +18,9 @@
 /* html{
     overflow-x:hidden;
 } */
+body{
+    font-family: 'Poppins', sans-serif;
+}
 
 header{
     height: 10vh;
